Styles fixes
fixed last tiles & footer overlap,
separated tile background from component

--- a/src/app/components/footer/footer.component.less
+++ b/src/app/components/footer/footer.component.less
@@ -1,9 +1,11 @@
+body {
+    padding-bottom: 8.5rem;
+}
 .footer {
     background: #222;
     bottom: 0;
     box-sizing: border-box;
-    min-height: 5rem;
-    margin-top:2rem;
+    height: 8.5rem;
     padding: 2rem;
     position: absolute;
     text-align: center;
@@ -17,3 +19,12 @@
         }
     }
 }
+
+@media screen and (min-width: 45rem) {
+    body {
+        padding-bottom: 5rem;
+    }
+    .footer {
+        height: 5rem;
+    }
+}    
