--- a/src/app/pages/jobs/jobs.component.less
+++ b/src/app/pages/jobs/jobs.component.less
@@ -1,5 +1,3 @@
-@import "../../shared/tiles/tiles.less";
-
 h2 { margin-top: 0; }
 
 .row-xp {
@@ -23,43 +21,4 @@ h2 { margin-top: 0; }
         border-top: solid 1px #111;
         padding: 0.5rem 0;
     }
-}
-
-.tile-button {
-    width: 170px;
-}
-
-.tiles {
-    text-align: center;
-    margin: 2rem 0;
-
-    .tile-button {
-        background: transparent;
-        cursor: pointer;
-        margin: 2rem 0;
-        opacity: 0.75;
-    
-        &:hover{
-            opacity: 1;
-        }
-    
-        &.active{
-            background: transparent;
-            opacity: 1;
-        }
-    }
-    .tile-detail {
-        // background: #111;
-        // color: white;
-        border-radius: 5px;
-        text-align: left;
-        width: 100%;
-        
-    }
-    @media screen and (min-width: 45rem) {
-        .tile-detail {
-            margin: 0 4rem;
-            width: calc(100% - 8rem);
-        }
-    }    
 }
